Switch Ruby to use JRuby, easier to install and faster